--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <a href="Lab Assesment/index1.html">Tap to Visit My Website</a>
+    <a href="Lab Report-2/index.html">Tap to See Lab Report-02</a>
+    
 </body>
 </html>
