--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Lab Assesment/index1.html">Tap to Visit My Website</a>
+    <a href="Lab Assesment/index1.html">Tap to Visit My Website</a><br><br>
     <a href="Lab Report-2/index.html">Tap to See Lab Report-02</a>
     
 </body>
